# itk-travis

./: CMakeLists.txt  README.md
libfilter/: CMakeLists.txt  bilateral_filter.cxx  bilateral_filter.h
test/: CMakeLists.txt  MIDAS.cmake  MIDAS3.cmake
test/testfilter/: CMakeLists.txt  main.cpp  test_args.h  testfilter.cpp  testfilter.h
